--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2076,7 +2076,7 @@ $avatar_passage
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="47" name="avatar_bakery_4" tags="" position="2850,1000" size="100,100">&lt;&lt;nobr&gt;&gt;
 &lt;&lt;set $avatar_turn = $avatar_turn+1&gt;&gt;
-&lt;&lt;set $avatar_passage to &quot;avatar_bakery4_00/As Buro converses with Mrs. Lopez, or Sofia as her friends call her, the shop owner shares stories about Hachi&#39;s fondness for old bread crusts, often found near the bakery&#39;s dumpster in the mornings./panting&quot;&gt;&gt;
+&lt;&lt;set $avatar_passage to &quot;avatar_bakery4_00/As Buro converses with Mrs. Lopez, or Sofia as her friends call her, she shares stories about Hachi&#39;s fondness for old bread crusts, often found near the bakery&#39;s dumpster in the mornings./panting&quot;&gt;&gt;
 
 &lt;&lt;if $avatar_turn == 3&gt;&gt;
   &lt;&lt;set $avatar_bank to &quot;Or you can also visit the bank. It recently opened&quot;&gt;&gt;
@@ -2105,14 +2105,14 @@ $avatar_passage
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="48" name="avatar_bank_3" tags="" position="2225,1225" size="100,100"></tw-passagedata><tw-passagedata pid="49" name="avatar_bank_4" tags="" position="2225,1350" size="100,100"></tw-passagedata><tw-passagedata pid="50" name="avatar_bank_2" tags="" position="2100,1350" size="100,100"></tw-passagedata><tw-passagedata pid="51" name="avatar_bank_1" tags="" position="2100,1225" size="100,100"></tw-passagedata><tw-passagedata pid="52" name="avatar_church_1" tags="" position="2725,1200" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $avatar_passage to &quot;avatar_church1_00/Buro visits the church, where he meets Father Kent. Father Kent, a globe trotter evangelist hailing from the rust belt in Akron, tells Buro about Hachi&#39;s nightly visits to the church, where he finds shelter and companionship. He describes Hachi as a gentle soul, always seeking to give comfort./church_2&quot;&gt;&gt;
+&lt;&lt;set $avatar_passage to &quot;avatar_church1_00/Buro visits the church, where he meets Father Kent. Father Kent, a globe trotter evangelist hailing from the rust belt in Akron, tells Buro about Hachi&#39;s nightly visits to the church, where he finds shelter and companionship. He describes Hachi as a gentle soul, always seeking to give comfort./church2&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
 $avatar_passage
 
 &lt;&lt;if $avatar_narrating == &quot;avatar_church1_00false&quot; and $avatar_movement == &quot;Looking&quot;&gt;&gt;
   &lt;&lt;set $avatar_passage to &quot;avatar_church1_01/Buro steps close to the big arch framing the doors to the church. He scans the steps, the nearby trees, and the stained-glass windows, searching for any trace of Hachi&#39;s presence.
-As he approach, Buro said to himself, &#39;Let&#39;s see if there&#39;s any sign of Hachi here. Maybe he&#39;s left a clue behind.&#39;/m_heysh2&quot;&gt;&gt;
+As he approach, Buro said to himself, &#39;Let&#39;s see if there&#39;s any sign of Hachi here. Maybe he&#39;s left a clue behind&#39;./m_heysh2&quot;&gt;&gt;
 &lt;&lt;set $avatar_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -2131,13 +2131,13 @@ As he approach, Buro said to himself, &#39;Let&#39;s see if there&#39;s any sign
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="53" name="avatar_church_2" tags="" position="2725,1325" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $avatar_passage to &quot;avatar_church2_00/Buro sees Father Kent approaching, the wise and worldly priest of the church, and engages in conversation about Hachi&#39;s visits. Buro siad to him, &#39;Father Kent, I&#39;ve been searching for my dog buddy, Hachi. Have you seen him around the church lately?&#39;/m_talk1&quot;&gt;&gt;
+&lt;&lt;set $avatar_passage to &quot;avatar_church2_00/Buro sees Father Kent approaching, the wise and worldly priest of the church, and engages in conversation about Hachi&#39;s visits. Buro said to him, &#39;Father Kent, I&#39;ve been searching for my dog buddy, Hachi. Have you seen him around the church lately?&#39;/m_talk1&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
 $avatar_passage
 
 &lt;&lt;if $avatar_narrating == &quot;avatar_church2_00false&quot; and $avatar_movement == &quot;Looking&quot;&gt;&gt;
-  &lt;&lt;set $avatar_passage to &quot;avatar_church2_01/ To which he replied,&#39;Indeed, Hachi is a familiar presence here. He&#39;s known to seek solace and comfort among our congregation.&#39; Then he started to share stories about Hachi&#39;s nightly visits, describing him as a loyal and gentle soul who seeks shelter and companionship within the church walls. /church&quot;&gt;&gt;
+  &lt;&lt;set $avatar_passage to &quot;avatar_church2_01/ To which he replied, &#39;Indeed, Hachi is a familiar presence here. He&#39;s known to seek solace and comfort among our congregation&#39;. Then he started to share stories about Hachi&#39;s nightly visits, describing him as a loyal and gentle soul who seeks shelter and companionship within the church walls. /church&quot;&gt;&gt;
 &lt;&lt;set $avatar_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -2156,7 +2156,7 @@ $avatar_passage
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="54" name="avatar_church_3" tags="" position="2850,1200" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $avatar_passage to &quot;avatar_church3_00/Father Kent drifts from the conversation to offer a glimpse into his past, recounting tales of his travels and experiences as a preacher before finding his calling in the rust belt near Akron&#39;/m_talk2&quot;&gt;&gt;
+&lt;&lt;set $avatar_passage to &quot;avatar_church3_00/Father Kent drifts from the conversation to offer a glimpse into his past, recounting tales of his travels and experiences as a preacher before finding his calling in the rust belt near Akron&#39;./m_talk2&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
 $avatar_passage
@@ -2175,14 +2175,14 @@ $avatar_passage
 &lt;&lt;if $avatar_nextAct is true and avatar_narrating == &quot;avatar_church3_01false&quot; &gt;&gt;
   &lt;&lt;set $avatar_nextAct to false&gt;&gt;
     &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
-  		&lt;&lt;include&quot;avatar_church_3&quot;&gt;&gt;
+  		&lt;&lt;include&quot;avatar_church_4&quot;&gt;&gt;
   &lt;&lt;/replace&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="55" name="avatar_church_4" tags="" position="2850,1325" size="100,100">&lt;&lt;nobr&gt;&gt;
 &lt;&lt;set $avatar_turn = $avatar_turn+1&gt;&gt;
-&lt;&lt;set $avatar_passage to &quot;avatar_church4_00/: Moved by Father Kent&#39;s stories and seeking guidance, Buro expresses his gratitude and asks for advice on where to search for Hachi next. &#39;Father Kent—said Buro— your wisdom is invaluable to me. Where do you suggest I look next for Hachi?&#39;/panting&quot;&gt;&gt;
+&lt;&lt;set $avatar_passage to &quot;avatar_church4_00/: Moved by Father Kent&#39;s stories and seeking guidance, Buro expresses his gratitude and asks for advice on where to search for Hachi next. &#39;Father Kent—said Buro— your wisdom is invaluable to me. Where do you suggest I look next for Hachi?&#39;./panting&quot;&gt;&gt;
 
 &lt;&lt;if $avatar_turn == 3&gt;&gt;
   &lt;&lt;set $avatar_bank to &quot;Or you can also visit the bank. I am sure it recently opened&quot;&gt;&gt;
