--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2025,7 +2025,7 @@ $avatar_passage
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="45" name="avatar_bakery_1" tags="" position="2725,875" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $avatar_passage to &quot;avatar_bakery1_00/At the bakery, Buro encounters Lopez, the resident cat who prowls the shop. Lopez seems to take a liking to Buro, rubbing against his legs as he speaks with Mrs. Lopez, or Sofia for her friends, the shop owner. Mrs. Lopez shares stories about Hachi&#39;s love for chewing on old bread crusts, often found near the bakery&#39;s dumpster in the mornings./m_talk2&quot;&gt;&gt;
+&lt;&lt;set $avatar_passage to &quot;avatar_bakery1_00/At the bakery, Buro encounters Lopez, the resident cat who prowls the shop. Lopez seems to take a liking to Buro, rubbing against his legs as he speaks with Mrs. Lopez, or Sofia for her friends, the local baker. Mrs. Lopez shares stories about Hachi&#39;s love for chewing on old bread crusts, often found near the bakery&#39;s dumpster in the mornings./m_talk2&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
 $avatar_passage
@@ -2050,7 +2050,7 @@ $avatar_passage
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="46" name="avatar_bakery_2" tags="" position="2850,875" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $avatar_passage to &quot;avatar_bakery2_00/Buro notices Lopez, the resident cat, prowling around the bakery. Lopez seems to take a liking to Buro, rubbing against his legs as he engages in conversation with Mrs. Lopez, the local baker./meow&quot;&gt;&gt;
+&lt;&lt;set $avatar_passage to &quot;avatar_bakery2_00/Buro notices Lopez, the resident cat, prowling around the bakery. Lopez seems to take a liking to Buro, rubbing against his legs as he engages in conversation with Mrs. Lopez./meow&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
 $avatar_passage
@@ -2582,24 +2582,28 @@ makeComments(&#39;hachi&#39;,&#39;observes&#39;);
 &lt;&lt;liveblock&gt;&gt;
     &lt;&lt;if $hachi_checkpoint is &quot;hachi_tram&quot; and $previousHachi_checkpoint !== hachi_checkpoint&gt;&gt;
     	&lt;&lt;script&gt;&gt;stopComments(`hachi`)&lt;&lt;/script&gt;&gt;
+        &lt;&lt;set $hachi_comment to &quot;&quot;&gt;&gt;
         &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
         	&lt;&lt;set $previousHachi_checkpoint to $hachi_checkpoint&gt;&gt;
             &lt;&lt;include &quot;hachi_tram_1&quot;&gt;&gt;
         &lt;&lt;/replace&gt;&gt;
     &lt;&lt;elseif $hachi_checkpoint is &quot;hachi_fountain&quot; and $previousHachi_checkpoint !== hachi_checkpoint&gt;&gt;
     	&lt;&lt;script&gt;&gt;stopComments(`hachi`)&lt;&lt;/script&gt;&gt;
+        &lt;&lt;set $hachi_comment to &quot;&quot;&gt;&gt;
         &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
         	&lt;&lt;set $previousHachi_checkpoint to $hachi_checkpoint&gt;&gt;
             &lt;&lt;include &quot;hachi_fountain_1&quot;&gt;&gt;
         &lt;&lt;/replace&gt;&gt;
     &lt;&lt;elseif $hachi_checkpoint is &quot;hachi_stairs&quot; and $previousHachi_checkpoint !== hachi_checkpoint&gt;&gt;
     	&lt;&lt;script&gt;&gt;stopComments(`hachi`)&lt;&lt;/script&gt;&gt;
+        &lt;&lt;set $hachi_comment to &quot;&quot;&gt;&gt;
         &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
         	&lt;&lt;set $previousHachi_checkpoint to $hachi_checkpoint &gt;&gt;
             &lt;&lt;include &quot;hachi_stairs_1&quot;&gt;&gt;
         &lt;&lt;/replace&gt;&gt;
     &lt;&lt;elseif $hachi_checkpoint is &quot;hachi_bank&quot;  and $previousHachi_checkpoint !== hachi_checkpoint&gt;&gt;
     	&lt;&lt;script&gt;&gt;stopComments(`hachi`)&lt;&lt;/script&gt;&gt;
+       	&lt;&lt;set $hachi_comment to &quot;&quot;&gt;&gt;
         &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
        	 	&lt;&lt;set $previousHachi_checkpoint to $hachi_checkpoint&gt;&gt;
             &lt;&lt;include &quot;hachi_bank_1&quot;&gt;&gt;
@@ -2662,24 +2666,28 @@ makeComments(&#39;avatar&#39;,&#39;observes&#39;);
 &lt;&lt;liveblock&gt;&gt;
     &lt;&lt;if $avatar_checkpoint is &quot;avatar_tobacco&quot; and $previousAvatar_checkpoint !== avatar_checkpoint&gt;&gt;
     	&lt;&lt;script&gt;&gt;stopComments(`avatar`)&lt;&lt;/script&gt;&gt;
+        &lt;&lt;set $avatar_comment to &quot;&quot;&gt;&gt;
         &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
         	&lt;&lt;set $previousAvatar_checkpoint to $avatar_checkpoint&gt;&gt;
             &lt;&lt;include &quot;avatar_tobacco_1&quot;&gt;&gt;
         &lt;&lt;/replace&gt;&gt;
     &lt;&lt;elseif $avatar_checkpoint is &quot;avatar_bakery&quot; and $previousAvatar_checkpoint !== avatar_checkpoint&gt;&gt;
     	&lt;&lt;script&gt;&gt;stopComments(`avatar`)&lt;&lt;/script&gt;&gt;
+        &lt;&lt;set $avatar_comment to &quot;&quot;&gt;&gt;
         &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
         	&lt;&lt;set $previousAvatar_checkpoint to $avatar_checkpoint&gt;&gt;
             &lt;&lt;include &quot;avatar_bakery_1&quot;&gt;&gt;
         &lt;&lt;/replace&gt;&gt;
     &lt;&lt;elseif $avatar_checkpoint is &quot;avatar_bank&quot; and $previousAvatar_checkpoint !== avatar_checkpoint&gt;&gt;
     	&lt;&lt;script&gt;&gt;stopComments(`avatar`)&lt;&lt;/script&gt;&gt;
+        &lt;&lt;set $avatar_comment to &quot;&quot;&gt;&gt;
         &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
         	&lt;&lt;set $previousAvatar_checkpoint to $avatar_checkpoint &gt;&gt;
             &lt;&lt;include &quot;avatar_bank_1&quot;&gt;&gt;
         &lt;&lt;/replace&gt;&gt;
     &lt;&lt;elseif $avatar_checkpoint is &quot;avatar_church&quot;  and $previousAvatar_checkpoint !== avatar_checkpoint&gt;&gt;
     	&lt;&lt;script&gt;&gt;stopComments(`avatar`)&lt;&lt;/script&gt;&gt;
+        &lt;&lt;set $avatar_comment to &quot;&quot;&gt;&gt;
         &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
        	 	&lt;&lt;set $previousAvatar_checkpoint to $avatar_checkpoint&gt;&gt;
             &lt;&lt;include &quot;avatar_church_1&quot;&gt;&gt;
