--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1940,8 +1940,6 @@ Buro engages in conversation with Mr. Wei, the elderly shopkeeper, hoping to gat
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="42" name="avatar_tobacco_1" tags="" position="2100,875" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $avatar_comment to &quot;&quot;&gt;&gt;
-
 &lt;&lt;set $avatar_passage to &quot;avatar_tobacco1_00/Buro visits the tobacco shop, where he meets an elderly man named Mr. Wei. Mr. Wei, a former Hong Kong merchant of spices, tells Buro about Hachi&#39;s habit of barking at people who smoke, perhaps indicating a dislike for the smell of tobacco./m_talk2&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
@@ -2028,8 +2026,6 @@ $avatar_passage
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="45" name="avatar_bakery_1" tags="" position="2725,875" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $avatar_comment to &quot;&quot;&gt;&gt;
-
 &lt;&lt;set $avatar_passage to &quot;avatar_bakery1_00/At the bakery, Buro encounters Lopez, the resident cat who prowls the shop. Lopez seems to take a liking to Buro, rubbing against his legs as he speaks with Mrs. Lopez, or Sofia for her friends, the local baker. Mrs. Lopez shares stories about Hachi&#39;s love for chewing on old bread crusts, often found near the bakery&#39;s dumpster in the mornings./m_talk2&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
@@ -2110,10 +2106,7 @@ $avatar_passage
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="48" name="avatar_bank_3" tags="" position="2225,1225" size="100,100"></tw-passagedata><tw-passagedata pid="49" name="avatar_bank_4" tags="" position="2225,1350" size="100,100"></tw-passagedata><tw-passagedata pid="50" name="avatar_bank_2" tags="" position="2100,1350" size="100,100"></tw-passagedata><tw-passagedata pid="51" name="avatar_bank_1" tags="" position="2100,1225" size="100,100"></tw-passagedata><tw-passagedata pid="52" name="avatar_church_1" tags="" position="2725,1200" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $avatar_comment to &quot;&quot;&gt;&gt;
-
 &lt;&lt;set $avatar_passage to &quot;avatar_church1_00/Buro visits the church, where he meets Father Kent. Father Kent, a globe trotter evangelist hailing from the rust belt in Akron, tells Buro about Hachi&#39;s nightly visits to the church, where he finds shelter and companionship. He describes Hachi as a gentle soul, always seeking to give comfort./church2&quot;&gt;&gt;
-
 &lt;&lt;liveblock&gt;&gt;
 $avatar_passage
 
@@ -2589,28 +2582,24 @@ makeComments(&#39;hachi&#39;,&#39;observes&#39;);
 &lt;&lt;liveblock&gt;&gt;
     &lt;&lt;if $hachi_checkpoint is &quot;hachi_tram&quot; and $previousHachi_checkpoint !== hachi_checkpoint&gt;&gt;
     	&lt;&lt;script&gt;&gt;stopComments(`hachi`)&lt;&lt;/script&gt;&gt;
-        &lt;&lt;set $hachi_comment to &quot;&quot;&gt;&gt;
         &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
         	&lt;&lt;set $previousHachi_checkpoint to $hachi_checkpoint&gt;&gt;
             &lt;&lt;include &quot;hachi_tram_1&quot;&gt;&gt;
         &lt;&lt;/replace&gt;&gt;
     &lt;&lt;elseif $hachi_checkpoint is &quot;hachi_fountain&quot; and $previousHachi_checkpoint !== hachi_checkpoint&gt;&gt;
     	&lt;&lt;script&gt;&gt;stopComments(`hachi`)&lt;&lt;/script&gt;&gt;
-        &lt;&lt;set $hachi_comment to &quot;&quot;&gt;&gt;
         &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
         	&lt;&lt;set $previousHachi_checkpoint to $hachi_checkpoint&gt;&gt;
             &lt;&lt;include &quot;hachi_fountain_1&quot;&gt;&gt;
         &lt;&lt;/replace&gt;&gt;
     &lt;&lt;elseif $hachi_checkpoint is &quot;hachi_stairs&quot; and $previousHachi_checkpoint !== hachi_checkpoint&gt;&gt;
     	&lt;&lt;script&gt;&gt;stopComments(`hachi`)&lt;&lt;/script&gt;&gt;
-        &lt;&lt;set $hachi_comment to &quot;&quot;&gt;&gt;
         &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
         	&lt;&lt;set $previousHachi_checkpoint to $hachi_checkpoint &gt;&gt;
             &lt;&lt;include &quot;hachi_stairs_1&quot;&gt;&gt;
         &lt;&lt;/replace&gt;&gt;
     &lt;&lt;elseif $hachi_checkpoint is &quot;hachi_bank&quot;  and $previousHachi_checkpoint !== hachi_checkpoint&gt;&gt;
     	&lt;&lt;script&gt;&gt;stopComments(`hachi`)&lt;&lt;/script&gt;&gt;
-       	&lt;&lt;set $hachi_comment to &quot;&quot;&gt;&gt;
         &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
        	 	&lt;&lt;set $previousHachi_checkpoint to $hachi_checkpoint&gt;&gt;
             &lt;&lt;include &quot;hachi_bank_1&quot;&gt;&gt;
@@ -2618,7 +2607,44 @@ makeComments(&#39;hachi&#39;,&#39;observes&#39;);
     &lt;&lt;/if&gt;&gt;
 &lt;&lt;/liveblock&gt;&gt;
 
-&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="71" name="empty" tags="" position="450,1150" size="100,100">EMPTY</tw-passagedata><tw-passagedata pid="72" name="commentMovement_hachi" tags="" position="1050,200" size="200,100"> &lt;&lt;if typeof _prevhachiMovement === &#39;undefined&#39;&gt;&gt;&lt;&lt;set _prevhachiMovement to $hachi_movement&gt;&gt;&lt;&lt;elseif _prevhachiMovement !== $hachi_movement&gt;&gt;&lt;&lt;script&gt;&gt;makeShortComments(&#39;hachi&#39;, &#39;notmoving&#39;); console.log(variables().hachi_comment); &lt;&lt;/script&gt;&gt;&lt;&lt;set _prevhachiMovement to variables().hachi_movement&gt;&gt;&lt;&lt;if $hachi_comment !== _prevhachiComment&gt;&gt;&lt;&lt;set _prevhachiComment to $hachi_comment&gt;&gt;&lt;&lt;script&gt;&gt;var passage_temp = variables().hachi_comment;const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();console.log(renderedText);variables().hachi_passage = renderedText;&lt;&lt;/script&gt;&gt;&lt;&lt;set $hachi_passage to variables().hachi_passage&gt;&gt;&lt;&lt;/if&gt;&gt;&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="73" name="commentMovement_avatar" tags="" position="1275,200" size="200,100">&lt;&lt;if typeof _prevavatarMovement === &#39;undefined&#39;&gt;&gt;&lt;&lt;set _prevavatarMovement to $avatar_movement&gt;&gt;&lt;&lt;elseif _prevavatarMovement !== $avatar_movement&gt;&gt;&lt;&lt;script&gt;&gt;makeShortComments(&#39;avatar&#39;, &#39;notmoving&#39;); console.log(variables().avatar_comment); &lt;&lt;/script&gt;&gt;&lt;&lt;set _prevavatarMovement to variables().avatar_movement&gt;&gt;&lt;&lt;if $avatar_comment !== _prevavatarComment&gt;&gt;&lt;&lt;set _prevavatarComment to $avatar_comment&gt;&gt;&lt;&lt;script&gt;&gt;var passage_temp = variables().avatar_comment;const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();console.log(renderedText);variables().avatar_passage = renderedText;&lt;&lt;/script&gt;&gt;&lt;&lt;set $avatar_passage to variables().avatar_passage&gt;&gt;&lt;&lt;/if&gt;&gt;&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="74" name="evalDist_avatar" tags="" position="1275,75" size="200,100">&lt;&lt;nobr&gt;&gt;
+&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="71" name="empty" tags="" position="450,1150" size="100,100">EMPTY</tw-passagedata><tw-passagedata pid="72" name="commentMovement_hachi" tags="" position="1050,200" size="200,100">&lt;if typeof _prevhachiMovement === &#39;undefined&#39;&gt;
+    &lt;set _prevhachiMovement to $hachi_movement&gt;
+&lt;elseif _prevhachiMovement !== $hachi_movement&gt;
+    &lt;script&gt;
+        makeShortComments(&#39;hachi&#39;, &#39;notmoving&#39;);
+        console.log(variables().hachi_comment);
+    &lt;/script&gt;
+    &lt;set _prevhachiMovement to variables().hachi_movement&gt;
+    &lt;if $hachi_comment !== _prevhachiComment&gt;
+        &lt;set _prevhachiComment to $hachi_comment&gt;
+        &lt;script&gt;
+            var passage_temp = variables().hachi_comment;
+            const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();
+            console.log(renderedText);
+            variables().hachi_passage = renderedText;
+        &lt;/script&gt;
+        &lt;set $hachi_passage to variables().hachi_passage&gt;
+    &lt;/if&gt;
+&lt;/if&gt;
+</tw-passagedata><tw-passagedata pid="73" name="commentMovement_avatar" tags="" position="1275,200" size="200,100">&lt;&lt;if typeof _prevavatarMovement === &#39;undefined&#39;&gt;&gt;
+	&lt;&lt;set _prevavatarMovement to $avatar_movement&gt;&gt;
+&lt;&lt;elseif _prevavatarMovement !== $avatar_movement&gt;&gt;
+  &lt;&lt;script&gt;&gt;
+      makeShortComments(&#39;avatar&#39;, &#39;notmoving&#39;); 
+      console.log(variables().avatar_comment); 
+  &lt;&lt;/script&gt;&gt;
+&lt;&lt;set _prevavatarMovement to variables().avatar_movement&gt;&gt;
+&lt;&lt;if $avatar_comment !== _prevavatarComment&gt;&gt;
+	&lt;&lt;set _prevavatarComment to $avatar_comment&gt;&gt;
+    &lt;&lt;script&gt;&gt;
+    	var passage_temp = variables().avatar_comment;
+    	const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();
+        console.log(renderedText);
+        variables().avatar_passage = renderedText;
+     &lt;&lt;/script&gt;&gt;
+   &lt;&lt;set $avatar_passage to variables().avatar_passage&gt;&gt;
+ &lt;&lt;/if&gt;&gt;
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="74" name="evalDist_avatar" tags="" position="1275,75" size="200,100">&lt;&lt;nobr&gt;&gt;
 &lt;&lt;set $avatar_arriving to false&gt;&gt;
 &lt;&lt;script&gt;&gt;
 let valuesArray = variables().avatar_checkpoint_dist;
